# st-rocksdb-project

./: .gitignore  AGENT_HANDOFF.md  EXPERIMENTS_AND_SCRIPTS.md  Method.md  README.md  REPRODUCTION.md  Record.md
docs/: BEST_736_CONFIG.md  BUILD_AND_EXPERIMENTS.md  VANILLA_ROCKSDB_BASELINE.md  project_layout.md  rocksdb_index_builder_merge_notes.md  sst_and_manifest_plan.md  st_ablation_module_throughput_chart.html  st_ablation_module_throughput_chart_wuxi.html  st_ablation_wuxi_1sst_vs_manysst.html  st_experiment_14m_explainer_and_design.md  st_manifest_164_vs_31_bucket.html  st_manifest_vs_sst_ablation_charts.html  st_manifest_vs_sst_ablation_evidence.md  st_paper_1_1_workload_evaluation.md  st_prune_vs_full_pkdd_charts.html  st_prune_vs_full_pkdd_large_charts.html  st_prune_vs_full_random_n50_s42_charts.html  st_rocksdb_hard_baseline_experiment.md  st_validity_charts.html  st_validity_charts_pkdd.html  st_validity_experiment_design.md  st_validity_visualization.md  st_validity_visualization_pkdd.md
rocks-demo/: CMakeLists.txt  main.cpp  manifest_bucket_rtree_validate.cpp  segment_value_codec.hpp  st_bucket_ingest_build.cpp  st_fork_kv_stream_dump.cpp  st_meta_bench.cpp  st_meta_compact_existing.cpp  st_meta_compaction_verify.cpp  st_meta_read_bench.cpp  st_meta_scan_bench.cpp  st_meta_smoke.cpp  st_segment_key.hpp  st_segment_window_scan_vanilla.cpp  st_user_key.hpp  st_vanilla_kv_stream_ingest.cpp  traj_db_audit.cpp  trajectory_kv.hpp  trajectory_validate.cpp
rocksdb/: CMakeLists.txt
rocksdb/db/: builder.cc  builder.h  flush_job.cc  repair.cc  version_edit.cc  version_edit.h  version_set.cc
rocksdb/db/compaction/: compaction_outputs.cc  compaction_outputs.h
rocksdb/db/db_impl/: db_impl_compaction_flush.cc  db_impl_experimental.cc  db_impl_open.cc
rocksdb/include/rocksdb/: advanced_options.h  options.h  table.h
rocksdb/options/: cf_options.cc  cf_options.h  options.cc  options_helper.cc
rocksdb/table/: format.cc  format.h  index_value_codec.cc  index_value_codec.h  sst_file_dumper.cc  sst_file_dumper.h  st_meta_index_extension.h  st_meta_user_key.cc  st_meta_user_key.h
rocksdb/table/block_based/: binary_search_index_reader.cc  block.cc  block.h  block_based_table_builder.cc  block_based_table_iterator.cc  block_based_table_iterator.h  block_based_table_reader.cc  block_based_table_reader.h  hash_index_reader.cc  index_builder.cc  index_builder.h  partitioned_filter_block_test.cc  partitioned_index_reader.cc  user_defined_index_wrapper.h
rocksdb/tools/: CMakeLists.txt  db_bench_tool.cc  st_meta_sst_diag.cc
tools/: aggregate_wuxi_ablation_runs.py  audit_sst_entries.ps1  audit_wuxi_ablation_inputs.ps1  bench_st_meta_compare.ps1  bootstrap_rocksdb_vanilla.ps1  build_wuxi_segment_third_tier_hourly.ps1  build_wuxi_vanilla_replica_dbs.ps1  cache_wuxi_vanilla_wall_baseline.ps1  copy_compact_traj_st.ps1  generate_random_query_windows.py  generate_random_query_windows_wuxi.py  generate_wuxi_random_windows_validated.py  plot_st_meta_bench.py  plot_st_validity_spatial.py  process_pkdd_train.py  process_trajectories.py  process_wuxi_trajectory.py  refresh_wuxi_ablation_chart_html.py  run_pkdd_large_ablation_window_baseline.ps1  run_random_prune_vs_full_pkdd.ps1  run_st_experiments.cmd  run_st_experiments.ps1  run_vm_compare_median_plot.ps1  run_wuxi_dual_regime_full_ablation.ps1  run_wuxi_global_736_narrow4.ps1  run_wuxi_global_vm_auto_vs_vanilla.ps1  run_wuxi_manysst_ablation_timebucket_rtree.ps1  run_wuxi_random12_vm_p50_ablation.ps1  run_wuxi_segment_ablation_1_164_736.ps1  run_wuxi_segment_ablation_1_164_776.ps1  run_wuxi_segment_ablation_repeat_n.ps1  run_wuxi_segment_ablation_vanilla.ps1  run_wuxi_vanilla_cached_ablation_batch.ps1  st_diag_align_read_bench.ps1  st_manifest_disjoint_demo.ps1  st_meta_eval.ps1  st_meta_scan_bench_sweep.ps1  st_prune_dual_regime_experiment.ps1  st_prune_synergy_ablation.ps1  st_prune_vs_full_baseline_sweep.ps1  (+22 more)
